✨ :: (#1106) 최근 본 기업 조회 기능 추가